--- a/Dockerfile.sellerservice
+++ b/Dockerfile.sellerservice
@@ -11,15 +11,12 @@ RUN go mod download
 COPY . .
 
 # Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main ./cmd/main.go
-
-# Create logs directory in builder
-RUN mkdir -p /tmp/logs
+RUN CGO_ENABLED=0 GOOS=linux go build -o main ./cmd/main.go
 
 # Final stage
-FROM scratch
+FROM alpine:latest
 
-WORKDIR /
+WORKDIR /app
 
 # Copy binary from builder
 COPY --from=builder /app/main .
@@ -27,8 +24,8 @@ COPY --from=builder /app/main .
 # Copy config file
 COPY --from=builder /app/config.toml .
 
-# Copy logs directory structure
-COPY --from=builder /tmp/logs ./logs
+# Create logs directory
+RUN mkdir -p /app/logs
 
 # Expose port
 EXPOSE 8081
