add pricing for services

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,12 @@ METRICS_PATH=/metrics
 
 # Имя сервиса для меток в метриках
 METRICS_SERVICE_NAME=sellerservice
+
+# ======================
+# PriceService Configuration
+# ======================
+
+# Base URL для интеграции с PriceService
+# Локально: http://localhost:8082
+# Docker: http://host.docker.internal:8082
+PRICESERVICE_BASE_URL=http://host.docker.internal:8082
